--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "@eslint/js": "^9.36.0",
+    "babel-jest": "^30.2.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
